# the-robot

./: .gitmodules  Containerfile
design/: components.puml  create-service-sequence.puml  drive-state-controller-classes.puml  hardware-interface-classes.puml  main-component-classes.puml  main-sequence.puml  message-classes.puml  messaging-classes.puml  remote-drive-control-sequence.puml  service-builder-component-classes.puml  service-factory-component-classes.puml  service-flow.puml  test.puml
design/infrastructure/network-interface/: components.puml
design/infrastructure/pub-sub/: components.puml  message-broker-initialize-sequence.puml  subscribe-sequence.puml
dev-environment/: Containerfile
dev-environment/neovim-config/: lazy-lock.json
dev-environment/neovim-config/lua/plugins/: debugging.lua  neo-tree.lua  soil.lua  telescope.lua  treesitter.lua
dev-environment/tmux-config/: tmux.conf
development-environment/: Containerfile
development-environment/neovim-config/: README.md
development-environment/neovim-config/lua/plugins/: catppuccin.lua  lualine.lua
gtest/: CMakeLists.txt
gtest/messaging/: DriveStateCommand-test.cpp
gtest/pub-sub/message-definitions/: DriveStateCommand-test.cpp  NetworkMessage-test.cpp
gtest/utils/: ArrayList-test.cpp  DataBroker-test.cpp  LinearSearchMap-test.cpp  LinkedList-test.cpp  Queue-test.cpp
planning/: version-1-planning.txt
scripts/: build-env.sh  enter-env.sh  pull-from-container.sh  push-to-container.sh  run-env.sh  sync-project.sh  sync-source.sh
source/configuration/: ComponentIdentifiers.h
source/gtest/: CMakeLists.txt  DriveStateCommand-test.cpp  Observer-test.cpp  SingletonBrokerPublisher-test.cpp  SingletonBrokerSubscriber-test.cpp  SingletonMessageBroker-test.cpp
source/gtest/messaging/: DriveStateCommand-test.cpp
source/gtest/test-utils/: CMakeLists.txt  TestMessage.cpp  TestMessage.h  TestMessageObserver.h  TestObserverMessage.cpp  TestObserverMessage.h  TestSubscriber.cpp  TestSubscriber.h
source/gtest/utils/: ArrayList-test.cpp  Queue-test.cpp
source/infrastructure/network-interface/: CMakeLists.txt  LocalLinuxNetworkInterface.cpp  LocalLinuxNetworkInterface.h  NetworkInterface.h
source/infrastructure/network-interface/local-linux/: LocalLinuxNetworkInterface.cpp  LocalLinuxNetworkInterface.h
source/infrastructure/pub-sub/: CMakeLists.txt  TopicIdentifier.h
source/infrastructure/pub-sub/message-definitions/: DriveStateCommand.cpp  DriveStateCommand.h  NetworkMessage.cpp  NetworkMessage.h
source/infrastructure/pub-sub/model/: Message.h
source/messaging/: ByteString.cpp  ByteString.h  CMakeLists.txt  DriveStateCommand.cpp  DriveStateCommand.h  Message.h  Observer.h  Publisher.h  SingletonBrokerPublisher.cpp  SingletonBrokerPublisher.h  SingletonBrokerSubscriber.cpp  SingletonBrokerSubscriber.h  SingletonMessageBroker.cpp  SingletonMessageBroker.h  Subscriber.h  Topic.cpp  Topic.h  Topics.h
source/messaging/message-definitions/: DriveStateCommand.cpp  DriveStateCommand.h
source/service-layer/service-definition/: Service.h
source/service-layer/service-interface/: ServiceFactory.h
source/utils/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  DataBroker.cpp  DataBroker.h  HashMap.cpp  HashMap.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Pair.cpp  Queue.cpp  Queue.h
source/utils/array-list/: ArrayList.cpp  ArrayList.h
source/utils/controller/: Controller.h  PIDController.h
source/utils/data-broker/: DataBroker.cpp  DataBroker.h
source/utils/linked-list/: LinkedList.cpp  LinkedList.h
source/utils/map/: LinearSearchMap.cpp  LinearSearchMap.h  Map.h
source/utils/node/: Node.cpp  Node.h
source/utils/observer/: Observer.h
source/utils/pair/: Pair.cpp  Pair.h
source/utils/queue/: Queue.cpp  Queue.h
